--- a/README
+++ b/README
@@ -1,16 +1,18 @@
-Device-Nest version 0.01
+Device-Nest version 0.02
 ========================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+This module is designed to allow interaction with the Nest API via Perl.
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+In order to use this module, you will require a Nest thermostat installed in 
+your home as well.  You will also need your ClientID and ClientSecret provided
+by Nest when you register as a developer at https://developer.nest.com.
+
+You will also need an PIN token which can be obtained at 
+https://home.nest.com/login/oauth2?client_id=CLIENT_ID&state=FOO
+
+Your authorization code can be displayed by calling the fetch_Auth_Token()
+method in this module.  You can only call this function once per PIN token
+
 
 INSTALLATION
 
@@ -25,13 +27,14 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+   LWP::UserAgent v 6.05
+   JSON           v 2.90
 
 COPYRIGHT AND LICENCE
 
 Put the correct copyright and licence information here.
 
-Copyright (C) 2014 by A. U. Thor
+Copyright (C) 2014 by Kedar Warriner
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.14.2 or,
