Import of KEDAR/Device-Nest-0.04 from CPAN.
gitpan-cpan-distribution: Device-Nest
gitpan-cpan-version:      0.04
gitpan-cpan-path:         KEDAR/Device-Nest-0.04.tar.gz
gitpan-cpan-author:       KEDAR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -9,5 +9,7 @@ Revision history for Perl extension Device::Nest.
     - added more detailed documentation
 0.03  Jul 13 2014
     - added functions to fetch all remaining parameters
+0.04  Jul 14 2014
+    - added functions to set target temperatures
     
     
