Import of KEDAR/Device-Nest-0.05 from CPAN.
gitpan-cpan-distribution: Device-Nest
gitpan-cpan-version:      0.05
gitpan-cpan-path:         KEDAR/Device-Nest-0.05.tar.gz
gitpan-cpan-author:       KEDAR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -11,5 +11,7 @@ Revision history for Perl extension Device::Nest.
     - added functions to fetch all remaining parameters
 0.04  Jul 14 2014
     - added functions to set target temperatures
+0.05  Jul 16 2014
+    - added functions to fetch and set "away" state
     
     
