Import of KEDAR/Device-Nest-0.06 from CPAN.
gitpan-cpan-distribution: Device-Nest
gitpan-cpan-version:      0.06
gitpan-cpan-path:         KEDAR/Device-Nest-0.06.tar.gz
gitpan-cpan-author:       KEDAR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -13,5 +13,7 @@ Revision history for Perl extension Device::Nest.
     - added functions to set target temperatures
 0.05  Jul 16 2014
     - added functions to fetch and set "away" state
-    
+0.06  Jul 16 2014
+    - added option for debug printouts
+    - added method to dump contents of $self
     
