--- a/Changes
+++ b/Changes
@@ -1,8 +1,8 @@
 Revision history for Perl extension Device::Nest.
 
 0.01  Jul  9 2014
-	- original version; created by h2xs 1.23 with options
-		-AXc -n Device::Nest
+    - original version; created by h2xs 1.23 with options
+      - AXc -n Device::Nest
 0.02  Jul 13 2014
     - added methods to fetch ambient temp in F and C
     - added method to fetch thermostat designation
@@ -20,4 +20,7 @@ Revision history for Perl extension Device::Nest.
     - Added decoding of the HTTP code and reason for most recent request
     - Added functions to fetch last code and last reason
     - Moved common code to __process_get and __process_set
+0.08  Oct 31, 2014
+    - Added calculation of execution of Fetch commands
+    - Added function to retrieve time of last execution
     
