--- a/Changes
+++ b/Changes
@@ -23,4 +23,6 @@ Revision history for Perl extension Device::Nest.
 0.08  Oct 31, 2014
     - Added calculation of execution of Fetch commands
     - Added function to retrieve time of last execution
-    
+0.09  Nov 20, 2014
+    - Added fetch_Can_Cool, fetch_Can_Heat, fetch_Has_Fan, fetch_Is_Online, 
+      fetch_Is_Using_Emergency_Heat    
